<resources>
    <string name="app_name">SuperTestApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login Fragment</string>
    <string name="second_fragment_label">Search User</string>
    <string name="user_details_label">User Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in_with_github">Log in with GitHub</string>
    <string name="please_wait">Please wait</string>
    <string name="user_name">User Name:</string>
    <string name="name">Name:</string>
    <string name="created_at">Created At:</string>
    <string name="enter_git_username">Enter Git username</string>
    <string name="search">Search</string>
</resources>